--- a/index.html
+++ b/index.html
@@ -67,6 +67,29 @@
       	  	<p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
       	  </li>
       </section>
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+          <h3 class="section-subtitle">Для тех, кто любит пркрастинировать</h3>
+        <div class="video__iframes">
+          <iframe class="video__iframe" scrolling="no"  src="https://www.youtube.com/embed/5MgBikgcWnY?controls=0"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU?controls=0&fs=0"></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+         <div class="two-columns">
+          <h3 class="two-columns__brief">
+            История Барбары Оакли
+          </h3>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причем далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что ее выдвинули вкомандиры. Но для продвижения по службе нужно было сдавать математику.И тогда Барбара придумала свой подход к точным наукам. Оказалось , если вам что-то «плохо дается», ваши добытые трудом знания гораздо глубже, чем у тех, кому все ясно с первого взгляда.
+            </p>
+          </div>
+        </div>    
+      </section>
+      <section class="feynman">
+        
+      </section>
       <section class="digits">
       	<h2 class="section-title">Цифры и факты</h2>
       	  <h3 class="section-subtitle">Про учебу и мозг</h3>
