--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div> 
-      <p class="header__title">Научиться учиться</p>  
+      <h1 class="header__title">Научиться учиться</h1>  
       <p class="header__subtitle">Какие современнные и эффективные подходы к обучению вы можете использовать в своей жизни? 
       <a href=# class="header__link">Узнать →</a></p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="">      
-      <div class="header__square-pic"></div>      
+      <div class="header__square-pic rotation"></div>      
     </header>
     <main class="content">
       <section class="description">
@@ -32,7 +32,7 @@
               <span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать? 
             </p>
             <p class="two-columns__paragraph">
-              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти жи техники применяются на примере обучения в Практикуме.
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
         </div>
@@ -46,32 +46,33 @@
       	  	<h3 class="cards__title">Два вида внимания</h3>
       	  	<p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
       	  </li>
-      	   <li class="cards__item">
+      	  <li class="cards__item">
       	  	<img src="./images/cards-recall.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Recall</h3>
       	  	<p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
       	  </li>
-      	   <li class="cards__item">
+      	  <li class="cards__item">
       	  	<img src="./images/cards-interliving.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Интерливинг</h3>
       	  	<p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
       	  </li>
-      	   <li class="cards__item">
+      	  <li class="cards__item">
       	  	<img src="./images/cards-question.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Вопросы</h3>
       	  	<p class="cards__description">Слушая преподавателя, придумайте хороший вопрос, который вас действительно волнует.</p>
       	  </li>
-      	   <li class="cards__item">
+      	  <li class="cards__item">
       	  	<img src="./images/cards-competence.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Иллюзия компетентности</h3>
       	  	<p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
       	  </li>
+        </ul>
       </section>
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит пркрастинировать</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" scrolling="no"  src="https://www.youtube.com/embed/5MgBikgcWnY?controls=0"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY?controls=0"></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU?controls=0&fs=0"></iframe>
         </div>
       </section>
@@ -88,7 +89,9 @@
         </div>    
       </section>
       <section class="feynman">
-        
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a href=# class="feynman__link">Подробнее →</a>
       </section>
       <section class="digits">
       	<h2 class="section-title">Цифры и факты</h2>
@@ -130,10 +133,24 @@
       	  </li>
       	</ul>
       </section>
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир - школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир - школа» нужно прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__bok-pic" src="images/khan-book.jpg" alt="Книга Салмана Хана">
+            <a href=# class="khan__buy-link">Купить книгу →</a>
+          </div>
+        </div>
+      </section>
       <section class="kaufman">
+        <div class="kaufman__triangle rotation"><img src="images/kaufman-triangle.svg" alt=""></div>
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
       	  <h3 class="section-subtitle section-subtitle_theme_dark">От Джоша Кауфмана</h3>
-      	<ul class="table table_theme_dark">
+        <ul class="table table_theme_dark">
       	  <li class="table__cell table__cell_theme_dark">
       	  	<p class="table__heading table__heading_theme_dark">1</p>
       	  	<p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -182,7 +199,7 @@
       <div class="resources__logo-zone">
       	<div class="resources__link"><a href=#><img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt=""></a></div>
       	<div class="resources__link"><a href=#><img src="./images/logo/resources-n1.svg" class="resources__logo" alt=""></a></div>
-      	<div class="resources__link"><a a href=#><img src="./images/logo/resources-strelka.svg" class="resources__logo" alt=""></a></div>
+      	<div class="resources__link"><a href=#><img src="./images/logo/resources-strelka.svg" class="resources__logo" alt=""></a></div>
       	<div class="resources__link"><a href=#><img src="./images/logo/resources-polka.svg" class="resources__logo" alt=""></a></div>
       </div>
       </section>
@@ -204,11 +221,12 @@
        	<div class="footer__column footer__column_content_social">
        	  <p class="footer__column-heading">Соцсети</p>
        	  <div class="footer__column-links">
-       	  	<a href=# class="footer__column-link"><img src="./images/facebook_color_white.svg" class="footer__social-icon"> Facebook</a>
-       	  	<a href=# class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon"> ВКонтакте</a>
-       	  	<a href=# class="footer__column-link"><img src="./images/instagram_color_white.svg" class="footer__social-icon"> Instagram</a>
+       	  	<a href=# class="footer__column-link"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt=""> Facebook</a>
+       	  	<a href=# class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt=""> ВКонтакте</a>
+       	  	<a href=# class="footer__column-link"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt=""> Instagram</a>
        	  </div>
         </div>
+      </div>  
     </footer>
   </div>
 </body>
