--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="description" content="Первая проектная работа на курсе Яндекс Практикума Веб-разработчик+">
   <meta name="author" content="Александр Мустафин">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="./styles/style.css">
+ </head> 
 <body>
   <div class="page">
     <header class="header">
@@ -15,7 +16,7 @@
       <h1 class="header__title">Научиться учиться</h1>  
       <p class="header__subtitle">Какие современнные и эффективные подходы к обучению вы можете использовать в своей жизни? 
       <a href=# class="header__link">Узнать →</a></p>
-      <img src="./images/header-image.png" class="header__main-illustration" alt="">      
+      <img src="./images/header-image.png" class="header__main-illustration" alt="Опять двойка, картина Федора Решетникова">      
       <div class="header__square-pic rotation"></div>      
     </header>
     <main class="content">
@@ -42,27 +43,27 @@
       	  <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
       	<ul class="cards">
       	  <li class="cards__item">
-      	  	<img src="./images/cards-attention.png" class="cards__image" alt="">
+      	  	<img src="./images/cards/cards-attention.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Два вида внимания</h3>
       	  	<p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
       	  </li>
       	  <li class="cards__item">
-      	  	<img src="./images/cards-recall.png" class="cards__image" alt="">
+      	  	<img src="./images/cards/cards-recall.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Recall</h3>
       	  	<p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
       	  </li>
       	  <li class="cards__item">
-      	  	<img src="./images/cards-interliving.png" class="cards__image" alt="">
+      	  	<img src="./images/cards/cards-interliving.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Интерливинг</h3>
       	  	<p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
       	  </li>
       	  <li class="cards__item">
-      	  	<img src="./images/cards-question.png" class="cards__image" alt="">
+      	  	<img src="./images/cards/cards-question.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Вопросы</h3>
       	  	<p class="cards__description">Слушая преподавателя, придумайте хороший вопрос, который вас действительно волнует.</p>
       	  </li>
       	  <li class="cards__item">
-      	  	<img src="./images/cards-competence.png" class="cards__image" alt="">
+      	  	<img src="./images/cards/cards-competence.png" class="cards__image" alt="">
       	  	<h3 class="cards__title">Иллюзия компетентности</h3>
       	  	<p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
       	  </li>
@@ -141,8 +142,8 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__bok-pic" src="images/khan-book.jpg" alt="Книга Салмана Хана">
-            <a href=# class="khan__buy-link">Купить книгу →</a>
+            <img class="khan__bok-pic" src="images/khan-book.jpg" alt="Весь мир - школа, Салман Хан">
+            <div class="khan__buy-link"><a href=#>Купить книгу →</a></div>
           </div>
         </div>
       </section>
@@ -197,10 +198,10 @@
       <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
       <div class="resources__logo-zone">
-      	<div class="resources__link"><a href=#><img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt=""></a></div>
-      	<div class="resources__link"><a href=#><img src="./images/logo/resources-n1.svg" class="resources__logo" alt=""></a></div>
-      	<div class="resources__link"><a href=#><img src="./images/logo/resources-strelka.svg" class="resources__logo" alt=""></a></div>
-      	<div class="resources__link"><a href=#><img src="./images/logo/resources-polka.svg" class="resources__logo" alt=""></a></div>
+      	<div class="resources__link"><a href=#><img src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="Arzamas"></a></div>
+      	<div class="resources__link"><a href=#><img src="./images/logo/resources-n1.svg" class="resources__logo" alt="N+1"></a></div>
+      	<div class="resources__link"><a href=#><img src="./images/logo/resources-strelka.svg" class="resources__logo" alt="STRELKA"></a></div>
+      	<div class="resources__link"><a href=#><img src="./images/logo/resources-polka.svg" class="resources__logo" alt="ПОЛКА"></a></div>
       </div>
       </section>
     </main>
@@ -208,22 +209,22 @@
       <div class="footer__columns">
       	<div class="footer__column footer__column_content_copyright">
       	  <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&copy; Виктор Абанькин</p>  
+          <p class="footer__author">&copy; Александр Мустафин</p>  
        	</div>
        	<div class="footer__column footer__column_content_info">
        	  <p class="footer__column-heading">О Практикуме</p>
        	  <nav class="footer__column-links">
-       	  	<a href=# class="footer__column-link">Главная</a>
-       	  	<a href=# class="footer__column-link">Концепция</a>
-       	  	<a href=# class="footer__column-link">Наставники</a>
+       	  	 <div class="footer__column-link"><a href=#>Главная</a></div>
+       	  	<div class="footer__column-link"><a href=#>Концепция</a></div>
+       	  	<div class="footer__column-link"><a href=#>Наставники</a></div>
        	  </nav>       	  
        	</div>
        	<div class="footer__column footer__column_content_social">
        	  <p class="footer__column-heading">Соцсети</p>
        	  <div class="footer__column-links">
-       	  	<a href=# class="footer__column-link"><img src="./images/facebook_color_white.svg" class="footer__social-icon" alt=""> Facebook</a>
-       	  	<a href=# class="footer__column-link"><img src="./images/vk_color_white.svg" class="footer__social-icon" alt=""> ВКонтакте</a>
-       	  	<a href=# class="footer__column-link"><img src="./images/instagram_color_white.svg" class="footer__social-icon" alt=""> Instagram</a>
+       	  	<div class="footer__column-link"><a href=#><img src="./images/social-icon/facebook_color_white.svg" class="footer__social-icon" alt="Facebook logo"> Facebook</a></div>
+       	  	<div class="footer__column-link"><a href=#><img src="./images/social-icon/vk_color_white.svg" class="footer__social-icon" alt="VK logo"> ВКонтакте</a></div>
+       	  	<div class="footer__column-link"><a href=#><img src="./images/social-icon/instagram_color_white.svg" class="footer__social-icon" alt="Instagram logo"> Instagram</a></div>
        	  </div>
         </div>
       </div>  
